[package]
name = "cerboy"
version = "0.1.0"
edition = "2018"
default-run = "cerboy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
minifb = "0.19.3"
const_format = "0.2.26"
unroll = "0.1.5"

# [dev-dependencies]
# https://doc.rust-lang.org/rustc/instrument-coverage.html
# rustup component add llvm-tools
# rustfilt = "0.2"
# cargo-binutils = "0.3"

[[bin]]
name = "dis"
path = "src/bin/dis.rs"
