[package]
name = "cerdbg"
version = "0.1.0"
edition = "2018"
default-run = "cerdbg"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
imgui = { version = "0.11.0", path="..\\..\\imgui-rs\\imgui" }
imgui-glow-renderer = { version = "0.11.0", path="..\\..\\imgui-rs\\imgui-glow-renderer" }
imgui-winit-support = { version = "0.11.0", path="..\\..\\imgui-rs\\imgui-winit-support"}
glow = "0.12.0"
memoffset = "0.9"
glutin = "0.31.1"
glutin-winit = "0.4.2"
image = "0.23"
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
